--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -26,11 +26,18 @@
   width: 90%;
 }
 
+.nav-log-in {
+  margin: auto 0;
+  display: flex;
+  text-decoration: none;
+}
+
 .nav-log-in-btn {
   background-color: black;
   border-color: red;
   color: red;
   font-size: 1.5rem;
+  margin: 0 auto;
   width: 60%;
 }
 
